# dui

./: .gitignore  Cargo.toml  Trunk.toml  index.html
.github/workflows/: pages.yml
src/: app.rs  bridge.rs  db.rs  lib.rs  main.rs  query_window.rs  table_view.rs
tests/: snapshots.rs
