[package]
name = "dui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui_extras = "0.31"
egui-phosphor = { version = "0.9", features = ["regular"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
duckdb = { version = "1", features = ["bundled"] }
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
